--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,123 +1,1 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
-
-* {
-  box-sizing: border-box;
-}
-
-::-webkit-scrollbar {
-  display: none;
-}
-
-
-
-.developer {
-  display: inline-block;
-  opacity: 0.1;
-  transform: translateX(-150px);
-  /* Initial position */
-}
-
-a:hover {
-  transform: translateY(-2px);
-  text-decoration: underline;
-
-}
-
-
-a {
-  z-index: 10000;
-  cursor: none;
-}
-
-.dp {
-  opacity: 0.2;
-  transform: translate(35vw, 200px) scale(0.3);
-}
-
-.cursor {
-  z-index: 10000700;
-
-}
-
-.cursor div {
-  width: 0;
-  height: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-
-  border-bottom: 5px solid rgb(38, 41, 38);
-
-}
-
-.birds {
-  display: none;
-}
-
-.progres {
-  font-family: “Open Sans”, sans-serif;
-  color: #f5f5f5;
-  z-index: 10000;
-  text-shadow: 0px -2px 4px #fff, 0px -2px 10px #FF3, 0px -10px 20px #F90, 0px -20px 40px #C33;
-}
-
-.main::after {
-  content: "";
-  background-image: url('https://upload.wikimedia.org/wikipedia/commons/7/76/1k_Dissolve_Noise_Texture.png'
-    );
-  width: 200%;
-  height: 200%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  opacity: 0.1;
-  animation: animationGain 8s steps(10) infinite;
-}
-
-
-@keyframes animationGain {
-
-  0%,
-  10% {
-    transform: translate(-5%, -10%);
-  }
-
-  20% {
-    transform: translate(-15%, -20%);
-  }
-
-  30% {
-    transform: translate(-5%, -10%)
-  }
-
-  40% {
-    transform: translate(-15%, -20%);
-  }
-
-  50% {
-    transform: translate(-5%, -10%)
-  }
-
-  60% {
-    transform: translate(-15%, -20%);
-  }
-
-  70% {
-    transform: translate(-5%, -10%)
-  }
-
-  80% {
-    transform: translate(-15%, -20%);
-  }
-
-  90% {
-    transform: translate(-5%, -10%)
-  }
-
-  100% {
-    transform: translate(-15%, -20%);
-  }
-}
+@tailwind base;@tailwind components;@tailwind utilities;*{box-sizing:border-box}::-webkit-scrollbar{display:none}.developer{display:inline-block;opacity:.1;transform:translateX(-150px)}a:hover{transform:translateY(-2px);text-decoration:underline}a{z-index:10000;cursor:none}.dp{opacity:.2;transform:translate(35vw,200px) scale(.3)}.cursor{z-index:10000700}.cursor div{width:0;height:0;border-left:5px solid transparent;border-right:5px solid transparent;border-bottom:5px solid #262926}.birds{display:none}.progres{font-family:“Open Sans”,sans-serif;color:#f5f5f5;z-index:10000;text-shadow:0 -2px 4px #fff,0 -2px 10px #ff3,0 -10px 20px #f90,0 -20px 40px #c33}.main::after{content:"";background-image:url('https://upload.wikimedia.org/wikipedia/commons/7/76/1k_Dissolve_Noise_Texture.png');width:200%;height:200%;position:fixed;top:0;left:0;opacity:.1;animation:8s steps(10) infinite animationGain}@keyframes animationGain{0%,10%,30%,50%,70%,90%{transform:translate(-5%,-10%)}100%,20%,40%,60%,80%{transform:translate(-15%,-20%)}}
